tests/paczka1/fuzzy1/53942623.err
Error in line 4: oVBnhlOyDvd S879 74,1
Error in line 6: A667 S674 92,8
Error in line 12: xYC8WGRIww8 S879 53,5
Error in line 13: oVBnhlOyDvd A667 65,1
Error in line 14: xYC8WGRIww8 A911 37,2
Error in line 21: xYC8WGRIww8 S879 54,6
Error in line 33: A667 S879 64,3
